[package]
name = "rlua_serde"
version = "0.3.0"
authors = ["zrkn <zrkn@email.su>"]
description = "Serde (De)serializer implementation for rlua Value"
repository = "https://github.com/zrkn/rlua_serde/"
readme = "README.md"
keywords = ["lua", "serde"]
license = "MIT"

[dependencies]
rlua  = { git = "https://github.com/kyren/rlua", rev = "78c2aac5bda746c9046f701a6d8631ad53841baa" }
serde = "1.0"

[dev-dependencies]
serde_derive = "1.0"
